--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "dependencies": {
     "@portabletext/react": "^3.2.1",
     "@sanity/client": "^6.29.1",
+    "@sanity/icons": "^3.7.0",
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.87.0",
     "next": "15.3.1",
+    "next-sanity": "^9.10.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanity": "^3.87.0",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.4",
